# teletarot

./: Cargo.toml  README.md
controller-cursive/: Cargo.toml
controller-cursive/src/: boxes.rs  colors.rs  main.rs  xp.rs
controller-cursive/src/include/: board.xp  cards.xp
controller-readline/: Cargo.toml
controller-readline/src/: main.rs
model/: Cargo.toml
model/src/: cards.rs  lib.rs  random.rs  solver.rs
model/src/random/: shuffled.rs  smartish.rs
