[package]
name = "teletarot-model"
version = "0.1.0"
edition = "2021"

[dependencies]
getset = "0.1.3"
enumn = "0.1.14"
fastrand = "2.1.1"
itertools = "0.13.0"

backtrack = { version="0.3.0", optional=true }
ahash = { version="0.8.11", optional=true }

[features]
default = ["solver"]
solver = ["dep:backtrack", "dep:ahash"]
